# mt5-research

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  FILL_MODEL.md  GUIDE.md  LICENSE  PHASE6.md  PHASE7.md  PHASE8.md  PHASE9.md  PORTFOLIO.md  README.md  RESEARCH.md  ROBUSTNESS.md  SHORTHOLDS.md  WALKFORWARD.md  backtest.py  bootstrap.sh  config.py  data.py  docker-compose.yml  execution.py  forwardtest.py  journal.py  phase10.py  phase6.py  phase7.py  phase8.py  phase9.py  portfolio.py  pyproject.toml  registry.py  requirements.txt  risk.py  robustness.py  run.bat  run.sh  shortholds.py  strategy.py  (+2 more)
.claude/agents/: phase6-verifier.md
.github/workflows/: ci.yml
core/: __init__.py  broker.py  decision.py  market_data.py  risk.py  strategy.py
data/: AUDUSD_swap.json  AUDUSD_symbol.json  EURUSD_swap.json  EURUSD_symbol.json  GBPUSD_swap.json  GBPUSD_symbol.json  GOLD_swap.json  GOLD_symbol.json  OILCash_symbol.json  US500Cash_symbol.json  USDJPY_swap.json  USDJPY_symbol.json  account.json
docs/: ARCHITECTURE.md
intel/: .env.example  .gitignore  GUIDE.md  README.md  runner.py  start.sh  store.py
intel/analysis/: synthesis.py  ta.py
intel/collectors/: mt5_pull.py  news.py  prices.py
intel/dashboard/: index.html  server.py
intel/docs/: INSTALL-RASPBERRY-PI.md  INSTALL-WINDOWS.md  INSTALL-WINE-MT5.md  SHOWCASE.md  forward-test.md
intel/executor/: EXECUTOR.md  __init__.py  analysis.py  backtester.py  bridge.py  bridge_server.py  config.py  dashboard.py  engine.py  gate.py  news_calendar.py  notify.py  onboard.py  report.py  review.py  risk.py  run.py  selftest.sh  store.py  strategies.py
intel/migrations/: 0001_init.sql
intel/ops/: install.sh  market-intel-dashboard.service  market-intel-executor.service  watchdog.py  (+3 more)
strategies/: __init__.py  base.py  buy_and_hold.py  carry_momentum.py  sma_crossover.py  ts_momentum.py
tests/: test_bridge_selfheal.py  test_chart_api.py  test_controls_api.py  test_core_contracts.py  test_costs.py  test_execution.py  test_hitl.py  test_momentum.py  test_phase10.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_portfolio.py  test_registry.py  test_risk.py  test_strategies.py  test_vault.py  test_walkforward.py
tools/: demo_roundtrip.py  dump_basket.py  dump_h4.py  mt5_dump.py  unlock_live.py  vault.py
web/: index.html
